--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,16 @@
             <artifactId>weka-stable</artifactId>
             <version>3.6.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-core-asl</artifactId>
+            <version>1.9.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.12</version>
+        </dependency>
 
     </dependencies>
     <properties>
