--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,20 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.12</version>
         </dependency>
+        <!-- https://github.com/rholder/snowball-stemmer -->
+        <dependency>
+            <groupId>com.github.rholder</groupId>
+            <artifactId>snowball-stemmer</artifactId>
+            <version>1.3.0.581.1</version>
+        </dependency>
+
+        <!-- https://code.google.com/p/language-detection/ -->
+        <dependency>
+            <groupId>com.cybozu.labs</groupId>
+            <artifactId>langdetect</artifactId>
+            <version>1.1-20120112</version>
+        </dependency>
+
 
     </dependencies>
     <properties>
