--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,12 @@
             <version>1.1-20120112</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+            <version>[4.0,)</version>
+        </dependency>
+
 
     </dependencies>
     <properties>
