--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
             <version>1.1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.googlecode.clichemaven</groupId>
+            <artifactId>cliche</artifactId>
+            <version>110413</version>
+        </dependency>
+
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
