--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,16 @@
             <version>110413</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.3.0.M1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlets</artifactId>
+            <version>9.3.0.M0</version>
+        </dependency>
 
     </dependencies>
     <properties>
