--- a/server/pom.xml
+++ b/server/pom.xml
@@ -77,6 +77,12 @@
             <version>9.3.0.M0</version>
         </dependency>
 
+        <dependency>
+            <groupId>tw.edu.ntu.csie</groupId>
+            <artifactId>libsvm</artifactId>
+            <version>3.17</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
